[package]
name = "easytab-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.32"

winit = "0.27.2"
raw-window-handle = "0.5.0"

[dependencies.windows]
version = "0.39.0"
features = ["Win32_UI_TabletPC", "Win32_Foundation", "Win32_System_Com", "Win32_UI_Controls", "Win32_UI_WindowsAndMessaging", "Win32_System_Rpc", "interface", "implement"]
